[gd_scene load_steps=3 format=3 uid="uid://bewp7u50gr63p"]

[ext_resource type="Shape2D" uid="uid://n2l4lu6otjb1" path="res://Scenes/Inventory/Items/PickUp/pickupShape.tres" id="1_30r61"]
[ext_resource type="Script" path="res://Scripts/Inventory/pickUp.gd" id="1_ww4ru"]

[node name="PickUp" type="Area2D"]
z_index = 5
y_sort_enabled = true
script = ExtResource("1_ww4ru")

[node name="Collision" type="CollisionShape2D" parent="."]
z_index = 1
shape = ExtResource("1_30r61")

[node name="PickupSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(2, 2)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
